[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "whonum-osint"
version = "1.0.0"
description = "Phone number OSINT — number intelligence, caller ID, spam detection"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.0",
    "phonenumbers>=8.13",
]

[project.scripts]
whonum = "whonum.cli:main"

[tool.setuptools.packages.find]
where = ["."]
